--- a/understanding/22/target-size-minimum.html
+++ b/understanding/22/target-size-minimum.html
@@ -24,20 +24,20 @@
             
             <p><a>Targets</a> have an area of at least 24 by 24 CSS pixels, except if:</p>
             <ul>
-                <li><strong>Spacing:</strong> The offset between adjacent targets is at least 24 CSS pixels, where the offset is measured from the farthest point of one target to the nearest point of each adjacent target including spacing;</li>
+                <li><strong>Spacing:</strong> The offset between adjacent targets is at least 24 CSS pixels, where the offset is measured from the farthest point of one target to the nearest point of each adjacent target;</li>
                 <li><strong>Inline:</strong> The target is in a sentence or block of text;</li>
                 <li><strong>Essential:</strong> A particular presentation of the target is essential to the information being conveyed.</li>
             </ul>
             <p class="note">Targets that allow for values to be selected spatially based on position within the target are considered one target for the purpose of the success criterion. Examples include sliders with granular values, color pickers displaying a gradient of colors, or editable areas where you position the cursor.</p>
             <p class="ednote">Are there issues with internationalization when describing inline links?</p>
-            <p class="ednote">Are there issues with pop-over content overlapping targets triggering failures?</p>
+            <p class="ednote">Are there issues with pop-over content where overlapping targets may trigger failures?</p>
         </blockquote>
     </section>
    
     <section id="intent">
         <h2>Intent of Target Size (Minimum)</h2>
 
-        <p>The intent of this Success Criterion is to ensure targets can easily be activated without accidentally activating an adjacent target. When targets are small, it is difficult for users with hand tremors and those who have difficulty with fine motor movement to activate them accurately. Providing spacing between targets will reduce the likelihood of accidentally activating the wrong control.</p>
+        <p>The intent of this Success Criterion is to ensure targets can easily be activated without accidentally activating an adjacent target. When targets are small, it is difficult for users with hand tremors and those who have difficulty with fine motor movement to activate them accurately. Giving targets a minimum size of 24 x 24 CSS pixels or failing that, providing spacing between targets will reduce the likelihood of accidentally activating the wrong control.</p>
 
         <p>The requirement is for targets to have at least 24 px offset between them. The offset between targets is the size plus spacing of a target, measured from the nearest point of each adjacent target to the farthest point of the current target. For example, a target of 20 x 20px would meet the requirement if it had a spacing of 2 px on all sides. If the target is 24 x 24px or larger, no spacing between it and adjacent targets would be required.</p>
       
