updated propsed content for symbolic text characters
- Title-cased heading.
- Changed image to add different colors.
- Updated text based on [my comments](https://github.com/w3c/wcag/pull/2067#issuecomment-932564059) on the initial proposal.

--- a/understanding/21/non-text-contrast.html
+++ b/understanding/21/non-text-contrast.html
@@ -390,12 +390,13 @@
 				</section>
 				
 				<section>
-					<h4>Symbolic text characters</h4>
-					<p>For the purposes of this SC, when text is used in a symbolic manner, rather than directly <q>expressing something in human language</q> as per the definition of <a>text</a> in WCAG, it is considered <em>non-text content</em>.</p>
+					<h4>Symbolic Text Characters</h4>
+					<p>For the purposes of this success criterion, when text is used in a symbolic manner, rather than directly <q>expressing something in human language</q> as per the definition of <a>text</a> in WCAG, it is considered <em>non-text content</em>.</p>
 					<figure id="figure-text-symbols">
-						<img alt="A button using an uppercase 'X' and a button with a '>' / 'greater-than' character" src="img/buttons-text-symbols.png" />
-						<figcaption>Even though technically the two buttons use text characters — an uppercase <q>X</q>, often (inappropriately) used for "Close" buttons, and a <q>&gt;</q> character, to act as a right-pointing arrow — they count as non-text characters/symbols. Their contrast ratio of just above 3:1 passes this SC.</figcaption>
+						<img alt="A 'close' button using an uppercase 'X', and a 'previous' button using a 'less-than' character." src="img/buttons-text-symbols.png" />
+						<figcaption>A &quot;close&quot; button using an uppercase letter <q>X</q> as a symbolic text character. The button's background is #D8D8D8 and the character's color is #787878. Next to the close button is a &quot;previous&quot; button, using a <q>&lt;</q> symbol as a symbolic text character. The button's background is white and the character's color is #009DD5.</figcaption>
 					</figure>
+					<p>Even though the two buttons use text characters&mdash;an uppercase <q>X</q>, often used for &quot;Close&quot; buttons, and a <q>&lt;</q> character, to act as a left-pointing arrow&mdash;they count as symbolic text characters that represent functionality. Their contrast ratios of just above 3:1 pass this success criterion.</p>
 				</section>
 
 				<section>
