--- a/charter.html
+++ b/charter.html
@@ -153,8 +153,9 @@
 				</section>
 				<section id="background-focus">
 					<h3>Focus for the 2022 - 2024 Charter</h3>
-					<p>The goal of this 2022 - 2024 AG 2 WG charter will be to create a version of WCAG 2 that addresses all public issues, updates interpretive guidance, and reduces the redundancy that has occurred during the evolution of WCAG 2.0 to WCAG 2.2. This version will not include new guidance. Instead it will consolidate and supplement existing guidance as well as developing the support materials needed for the updated versions (such as WCAG2ICT).</p>
+					<p>The goal of this 2022 - 2024 AG 2 WG charter will be to create a version of WCAG 2 that actively addresses public issues, updates interpretive guidance, and reduces the redundancy that has occurred during the evolution of WCAG 2.0 to WCAG 2.2. This version will not include new guidance. Instead it will consolidate and supplement existing guidance as well as developing the support materials needed for the updated versions (such as WCAG2ICT).</p>
 					<p>At the end of the 2022-2024 charter period, this group will publish the first public working draft (FPWD) of the final version of the WCAG 2.x series. The goal of the following charter period will be to publish that version and close the maintenance of these documents. The associated taskforce work will then move to the AG New WG group.</p>
+					<p class="note">If we decide to pursue this direction, the rationale will be added here.</p>
 				</section>
 			</section>
 			<section id="scope" class="scope">
@@ -170,7 +171,7 @@
 				<ul>
 					<li>updates <a href="https://www.w3.org/TR/wcag2ict/"><u>WCAG2ICT</u></a> with non-normative guidance on applying WCAG 2.1 and WCAG 2.2 to non-web technology,</li>
 					<li>develops Accessibility Conformance Testing (ACT) Rules Format 1.1, to keep ACT rules compatible with WCAG 3, and enable writing rules that have proven difficult to write under version 1.0,</li>
-					<li>provides evaluation guidance and test materials to support verfiication of conformance to normative guidance (such as <a href="https://www.w3.org/groups/wg/ag/publications">Accessibility Conformance Testing (ACT) Rules Format 1.0</a>),</li>
+					<li>provides evaluation guidance and test materials to support verification of conformance to normative guidance (such as <a href="https://www.w3.org/groups/wg/ag/publications">Accessibility Conformance Testing (ACT) Rules Format 1.0</a>),</li>
 					<li>maintains errata for content developed by predecessor groups (such as <a href="https://www.w3.org/TR/ATAG20/">Authoring Tool Accessibility Guidelines 2.0</a>).</li>
 				</ul>
 				<section id="section-out-of-scope">
@@ -197,7 +198,7 @@
 							<a href="#">First Public Working Draft of Web Content Accessibility Guidelines (WCAG) 2 Final</a>
 						</dt>
 						<dd>
-							<p>This specification defines updated guidelines to make web content and applications accessible to people with disabilities, cleaning up WCAG 2.2 by removing redundant content, clarifying language when needed, and closing out the issues raised on WCAG 2.0, 2.1, and 2.2.</p>	
+							<p>This specification defines updated guidelines to make web content and applications accessible to people with disabilities, cleaning up WCAG 2.2 by removing redundant content, clarifying language when needed, and closing out issues raised on WCAG 2.0, 2.1, and 2.2.</p>	
 							
 							<p class="draft-status"><b>Draft state:</b> Working Draft</p>
 							<p class="milestone"><b>Expected completion:</b> Q4 2024</p>
