--- a/guidelines/sc/22/focus-appearance.html
+++ b/guidelines/sc/22/focus-appearance.html
@@ -36,4 +36,6 @@
 
     <p class="note">Contrast calculations can be based on colors defined within the technology (such as HTML, CSS and SVG). Pixels modified by user agent resolution enhancements and anti-aliasing can be ignored.</p>
 
+    <p class="ednote">This Success Criterion is <a href="#items-at-risk">at risk</a>.</p>
+
  </section>
