--- a/guidelines/terms/22/encloses.html
+++ b/guidelines/terms/22/encloses.html
@@ -3,5 +3,5 @@
 	<p class="change">New</p>
    					
    <p>solidly bounds or surrounds</p>
-   				
+	<p class="ednote">This term is <a href="#items-at-risk">at risk</a>.</p>
 </dd>
