--- a/guidelines/terms/22/minimum-bounding-box.html
+++ b/guidelines/terms/22/minimum-bounding-box.html
@@ -2,5 +2,6 @@
 <dd class="new">
 	<p class="change">New</p>	
    <p>the smallest enclosing rectangle aligned to the horizontal axis within which all the points of a shape lie. For components which wrap onto multiple lines as part of a sentence or block of text (such as hypertext links), the bounding box is based on how the component would appear on a single line.</p>
+	<p class="ednote">This term is <a href="#items-at-risk">at risk</a>.</p>
 </dd>
 
