--- a/guidelines/terms/22/perimeter.html
+++ b/guidelines/terms/22/perimeter.html
@@ -3,5 +3,6 @@
 	<p class="change">New</p>	
    <p>continuous line forming the boundary of a shape not including shared pixels, or the <a>minimum bounding box</a>, whichever is shortest.</p>
   <p class="example">The perimeter calculation for a rectangle is 2<em>h</em>+2<em>w</em> -4, where <em>h</em> is the height and <em>w</em> is the width and the corners are not counted twice. The perimeter of a circle is 2𝜋<em>r</em>.</p>
+  <p class="ednote">This term is <a href="#items-at-risk">at risk</a>.</p>
 </dd>
 
