--- a/guidelines/index.html
+++ b/guidelines/index.html
@@ -751,25 +751,25 @@
       	<h2>Candidate Recommendation Exit Criteria</h2>
       	<p>The Web Content Accessibility Guidelines Working Group intends to submit this document for consideration as a W3C <a href="https://www.w3.org/2021/Process-20211102/#RecsPR">Proposed Recommendation</a> as soon as the following conditions are met: </p>
 			<ol>
-				<li> At least 10 Web sites[<a href="#exit-criteria_note-1">1</a>] that conform to WCAG 2.1 [<a href="#exit-criteria_note-2">2</a>] are available, of which: <ul>
+				<li> At least 10 Web sites[<a href="#exit-criteria_note-1">1</a>] that conform to WCAG 2.2 [<a href="#exit-criteria_note-2">2</a>] are available, of which: <ul>
 						<li> At least eight conform at level AA </li>
 						<li> At least two conform at level AAA;</li>
 						<li> At least one conforming site relies on one platform (Operating system, user agent, assistive technology) with touch screen and small screen support.</li>
 					</ul></li>
-				<li> At least two implementations [<a href="#exit-criteria_note-3">3</a>] exist for each success criterion added in WCAG 2.1 (Success Criteria from WCAG 2.0 do not need new implementations); </li>
+				<li> At least two implementations [<a href="#exit-criteria_note-3">3</a>] exist for each success criterion added in WCAG 2.2 (Success Criteria from WCAG 2.0 and 2.1 do not need new implementations); </li>
 				<li> Accessibility support documentation [<a href="#exit-criteria_note-4">4</a>] is provided such that: <ol>
-						<li> Evidence of successful implementation is available for SC added to WCAG 2.1.</li>
+						<li> Evidence of successful implementation is available for SC added to WCAG 2.2.</li>
 						<li> Documentation is provided for at least four platforms (operating system/user agent/assistive technology combinations).</li>
 					</ol></li>
-				<li> All sufficient techniques listed in Understanding WCAG 2.1 at the end of the Candidate Recommendation period contain test procedures; </li>
+				<li> All sufficient techniques listed in Understanding WCAG 2.2 at the end of the Candidate Recommendation period contain test procedures; </li>
 				<li> The Working Group has responded formally to all issues raised against this document related to any implementation efforts during the Candidate Recommendation period.</li>
 			</ol>
 			<p id="exit-criteria_note-1">[1] The conforming Web sites should be distinct and independently developed, represent diverse types of content including Content Management System (CMS)-generated content, utilize diverse Web technologies including W3C and non-W3C technologies, and have a varied representation of primary languages and scripts. Web applications can be single Web pages; otherwise conformance claims for Web sites should contain a minimum of 5 Web pages. Some success criteria may be satisfied in the conforming Web sites by the absence of applicable content on the Web pages, but Web sites should exhibit positive implementations of a significant number of success criteria at the corresponding level of conformance. </p>
-			<p id="exit-criteria_note-2">[2] For purpose of WCAG 2.1 implementation testing, conforming sites must actively meet new success criteria introduced in WCAG 2.1 along with relevant success criteria inherited from WCAG 2.0. Sites that only meet all WCAG 2.1 success criteria by virtue of inapplicability are not included. This is to ensure that WCAG 2.1 is actively tested, and the interaction of WCAG 2.1 success criteria with WCAG 2.0 success criteria is tested.</p>
+			<p id="exit-criteria_note-2">[2] For purpose of WCAG 2.2 implementation testing, conforming sites must actively meet new success criteria introduced in WCAG 2.2 along with relevant success criteria inherited from WCAG 2.0 and 2.1. Sites that only meet all WCAG 2.2 success criteria by virtue of inapplicability are not included. This is to ensure that WCAG 2.2 is actively tested, and the interaction of WCAG 2.2 success criteria with WCAG 2.0 and 2.1 success criteria is tested.</p>
 			<p id="exit-criteria_note-3">[3] The implementations of success criteria need not be within the conforming Web sites. Note that these implementations must contain content of the type addressed by the individual success criterion, that is, they cannot satisfy the success criteria purely by the absence of applicable content on the Web pages. </p>
 			<p id="exit-criteria_note-4">[4] In the absence of documentation of accessibility-supported technologies, conforming sites may show evidence by testing with assistive technologies. </p>
 			<p>Besides these implementations, feedback on implementation and use of this specification is welcome, including from implementations not selected as part of the formal implementation report for exiting Candidate Recommendation. </p>
-			<p>The <a href="https://www.w3.org/WAI/WCAG22/implementation-report/">implementation report</a> will be publicly released and is intended solely to be used as evidence of WCAG 2.1 implementability as a snapshot of the actual implementation behaviors at one moment in time. These implementations may not be the same as the Web sites available to the public. </p>
+			<p>The <a href="https://www.w3.org/WAI/WCAG22/implementation-report/">implementation report</a> will be publicly released and is intended solely to be used as evidence of WCAG 2.2 implementability as a snapshot of the actual implementation behaviors at one moment in time. These implementations may not be the same as the Web sites available to the public. </p>
 			<p>Working closely with Web developers, the Working Group expects to show evidence of meeting the exit criteria by <strong>30 September 2022</strong> or soon thereafter. </p>
       </section>
         <section>
