Added more resources to H91

--- a/techniques/html/H91.html
+++ b/techniques/html/H91.html
@@ -169,6 +169,15 @@
 					<li>
 						<a href="https://html.spec.whatwg.org/multipage/text-level-semantics.html#the-a-element">HTML - The <code class="language-html">a</code> element</a>
 					</li>
+					<li>
+						<a href="https://www.w3.org/TR/html-aam/">HTML Accessibility API Mappings</a>
+					</li>
+					<li>
+						<a href="https://www.w3.org/TR/accname/">Accessible Name and Description Computation</a>
+					</li>
+					<li>
+						<a href="https://www.w3.org/TR/core-aam/">Core Accessibility API Mappings</a>
+					</li>
             <li>
 							<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input"><abbr title="Mozilla Developer Network">MDN</abbr> - The Input (Form Input) element</a>
 						</li>
