Typos in code example

--- a/techniques/html/H49.html
+++ b/techniques/html/H49.html
@@ -74,14 +74,14 @@
    	<section class="example">
          <h3>Using the <code class="language-html">code</code> element to mark up code</h3>
    		<p>This example shows use of the <code>code</code> element to provide visual emphasis for a CSS rule:</p>
-   		<pre xml:space="preserve">&lt;code>
+   		<pre xml:space="preserve">&lt;code&gt;
 #trial {
   background-image: url(30daytrial.jpg);
   background-position: left top;
   background-repeat: no-repeat;
   padding-top: 68px;
 } 
-&lt;/code></pre>
+&lt;/code&gt;</pre>
    	</section>
    </section><section id="tests"><h2>Tests</h2>
       <section class="procedure"><h3>Procedure</h3>
