Added missing abbr

--- a/techniques/html/H32.html
+++ b/techniques/html/H32.html
@@ -17,7 +17,7 @@
       </section>
       <section id="description">
          <h2>Description</h2>
-         <p>The objective of this technique is to provide a mechanism that allows users to explicitly request changes of context. The intended use of a submit button is to generate an <abbr title="Hypertext Transfer Protocol">HTTP</abbr> request that submits data entered in a form, so it is an appropriate control to use for causing a change of context.</p>
+         <p>The objective of this technique is to provide a mechanism that allows users to explicitly request changes of context. The intended use of a submit button is to generate an <abbr title="HyperText Transfer Protocol">HTTP</abbr> request that submits data entered in a form, so it is an appropriate control to use for causing a change of context.</p>
    </section>
    <section id="examples">
       <h2>Examples</h2>
