--- a/techniques/html/H36.html
+++ b/techniques/html/H36.html
@@ -24,11 +24,11 @@
          <section class="example">
             <h3>An <code class="language-html">input</code> element with an <code class="language-html">alt</code> attribute</h3>
          
-<pre xml:space="preserve">&lt;form action="/find" method="post" role="search"&gt;
+<pre xml:space="preserve"><code class="language-html">&lt;form action="/find" method="post" role="search"&gt;
   &lt;label for="look-up"&gt;Find books&lt;label&gt;
   &lt;input id="look-up" type="text"&gt;
   &lt;input alt="Search" src="button.gif" type="image"&gt;
-&lt;/form&gt;</pre>
+&lt;/form&gt;</code></pre>
       </section>
    </section>
    <section id="tests">
@@ -43,7 +43,7 @@
       <section class="results">
          <h3>Expected Results</h3>
          <ul>
-            <li>#1 and #2 are true</li>
+            <li>1 and 2 are true</li>
          </ul>
       </section>
    </section>
