--- a/techniques/html/H37.html
+++ b/techniques/html/H37.html
@@ -13,7 +13,7 @@
 	</section>
 	<section id="applicability">
 		<h2>When to Use</h2>
-		<p>Images used within HTML documents.</p>
+		<p>Images used within <abbr title="HyperText Markup Language">HTML</abbr> documents.</p>
    </section>
 	 <section id="description">
 		 <h2>Description</h2>
@@ -32,8 +32,8 @@
                 text "Free newsletter. Get free recipes, news, and more. Learn more." The alt text
                 matches the text in the image.</p>
          
-<pre xml:space="preserve">&lt;img src="newsletter.gif" alt="Free newsletter. 
- Get free recipes, news, and more. Learn more."&gt;</pre>
+<pre xml:space="preserve"><code class="language-html">&lt;img src="newsletter.gif" alt="Free newsletter. 
+ Get free recipes, news, and more. Learn more."&gt;</code></pre>
       </section>
       <section class="example">
       	<p>An image on a Web site depicts the floor plan of a building. The image is an
@@ -57,7 +57,7 @@
       </section>
       <section class="results">
 				<h3>Expected Results</h3>
-         <p>Checks #2 and #3 are true.</p>
+         <p>Checks 2 and 3 are true.</p>
       </section>
    </section>
 	 <section id="related">
