Code tag around block of code

--- a/techniques/html/H39.html
+++ b/techniques/html/H39.html
@@ -13,7 +13,7 @@
 	</section>
 	<section id="applicability">
 		<h2>When to Use</h2>
-      <p>HTML data tables</p>
+      <p><abbr title="HyperText Markup Language">HTML</abbr> data tables</p>
    </section>
 	 <section id="description">
 		 <h2>Description</h2>
@@ -29,10 +29,10 @@
 		 <h2>Examples</h2>
       <section class="example">
          <h3>An appointment calendar with a <code class="language-html">caption</code></h3>
-<pre xml:space="preserve">&lt;table&gt;
+<pre xml:space="preserve"><code class="language-html">&lt;table&gt;
   &lt;caption&gt;Schedule for the week of March 6&lt;/caption&gt;
   ...
-&lt;/table&gt;</pre>
+&lt;/table&gt;</code></pre>
       </section>
    </section>
    <section id="tests">
@@ -49,7 +49,7 @@
       <section class="results">
          <h3>Expected Results</h3>
          <ul>
-            <li>#1, #2, and #3 are true.</li>
+            <li>1, 2, and 3 are true.</li>
          </ul>
       </section>
    </section>
