--- a/techniques/html/H40.html
+++ b/techniques/html/H40.html
@@ -13,7 +13,7 @@
       </section>
       <section id="applicability">
          <h2>When to Use</h2>
-         <p>HTML</p>
+         <p><abbr title="HyperText Markup Language">HTML</abbr></p>
    </section>
    <section id="description">
       <h2>Description</h2>
@@ -25,7 +25,7 @@
       <section class="example">
          <p>A list of descriptions of nautical terms used on a Website about sailing.</p>
          
-<pre xml:space="preserve">&lt;dl title="Nautical terms"&gt;
+<pre xml:space="preserve"><code class="language-html">&lt;dl title="Nautical terms"&gt;
   &lt;dt&gt;Knot&lt;/dt&gt;
   &lt;dd&gt;
     A &lt;i&gt;knot&lt;/i&gt; is a unit of speed equaling 1 
@@ -46,7 +46,7 @@
     side of a vessel, as perceived by a person 
     facing towards the bow (the front of the vessel).
   &lt;/dd&gt;
-&lt;/dl&gt;</pre>
+&lt;/dl&gt;</code></pre>
       </section>
    </section>
    <section id="tests">
